[gd_scene load_steps=2 format=3 uid="uid://bgix3dmiyk2jv"]

[ext_resource type="Script" path="res://Search.gd" id="1_gtnkp"]

[node name="Search" type="Window"]
title = "Search..."
initial_position = 1
size = Vector2i(400, 300)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_gtnkp")

[node name="SearchButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Search"

[node name="SearchTypeLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 94.0
offset_bottom = 33.0
text = "Search type:"

[node name="OptionButton" type="OptionButton" parent="SearchTypeLabel"]
layout_mode = 0
offset_left = 100.0
offset_top = -3.0
offset_right = 191.0
offset_bottom = 28.0
item_count = 2
popup/item_0/text = "Entry"
popup/item_0/id = 0
popup/item_1/text = "String"
popup/item_1/id = 1

[node name="SearchForLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 90.0
offset_right = 94.0
offset_bottom = 113.0
text = "Search for:"

[node name="TextEdit" type="TextEdit" parent="SearchForLabel"]
layout_mode = 0
offset_left = 90.0
offset_right = 375.0
offset_bottom = 160.0
placeholder_text = "Input your search here."

[node name="CaseSensitive" type="CheckBox" parent="."]
offset_top = 47.0
offset_right = 144.0
offset_bottom = 78.0
focus_mode = 0
text = "Case sensitive?"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="SearchButton" to="." method="_on_search_button_pressed"]
